--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ github_username:  misha-slyusarev
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: jekyll-theme-minimal
 gems:
   - jekyll-feed
 exclude:
