--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,11 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Misha Slyusarev
+title: Essential steps
+author: Mikhail Slyusarev
 email:
 description: > # this means to ignore newlines until "baseurl:"
-  Technology blog.
+  Share my professional experience.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username:
